--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-flask-nav==0.6
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -21,3 +20,4 @@ visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
 gunicorn==20.1.0
+psycopg2-binary==2.9.2
